--- a/.github/workflow/build.yaml
+++ b/.github/workflow/build.yaml
@@ -13,6 +13,16 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Setup Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python }}
+      - name: Install poetry
+        run: pip install poetry
+      - name: Install any other packages
+        run: poetry install
+      - name: Run tests
+        run: poetry run python -m pytest --cov=. --hypothesis-show-statistics --cov-report term --cov-report xml:coverage.xml
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
