--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=proso-me_whatever
 sonar.organization=proso-me
 
+sonar.python.coverage.reportPaths=coverage.xml
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=whatever
 #sonar.projectVersion=1.0
