--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.projectKey=proso-me_whatever
 sonar.organization=proso-me
 
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.coverage.exclusions=conftest.py
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=whatever
