--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,6 @@ jobs:
       - name: Run flake8
         run: poetry run flake8 .
       - name: Run bandit
-        run: poetry run bandit -r .
+        run: poetry run bandit -r src
       - name: Run safety
         run: poetry run safety check
