--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ isort = "^5.12.0"
 safety = "^2.3.5"
 bandit = "^1.7.5"
 pre-commit = "^3.5.0"
+mypy = "^1.7.0"
 
 [tool.pytest.ini_options]
 markers = [
