--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,3 +79,5 @@ jobs:
         run: poetry run bandit -r src
       - name: Run safety
         run: poetry run safety check
+      - name: Run mypy
+        run: poetry run mypy -m src.blog -m src.sum
